# CppCon2020

./: README.md
TransactionalLockingStrategy/code/: CMakeLists.txt  LICENSE.txt  run_cmake.sh  run_test_suite.sh  run_tests.sh  tx_test.sln  tx_test.vcxproj  tx_test.vcxproj.filters
TransactionalLockingStrategy/code/results/r04/: results_04.txt  t00_mode_0.txt  t01_mode_1.txt  t01_mode_2.txt  t01_mode_3.txt  t02_mode_1.txt  t02_mode_2.txt  t02_mode_3.txt  t03_mode_1.txt  t03_mode_2.txt  t03_mode_3.txt  t04_mode_1.txt  t04_mode_2.txt  t04_mode_3.txt  t05_mode_1.txt  t05_mode_2.txt  t05_mode_3.txt  t06_mode_1.txt  t06_mode_2.txt  t06_mode_3.txt  t07_mode_1.txt  t07_mode_2.txt  t07_mode_3.txt  t08_mode_1.txt  t08_mode_2.txt  t08_mode_3.txt  t09_mode_1.txt  t09_mode_2.txt  t09_mode_3.txt  t10_mode_1.txt  t10_mode_2.txt  t10_mode_3.txt  t11_mode_1.txt  t11_mode_2.txt  t11_mode_3.txt  t12_mode_1.txt  t12_mode_2.txt  t12_mode_3.txt  t13_mode_1.txt  t13_mode_2.txt  (+8 more)
TransactionalLockingStrategy/code/results/r05/: results_05.txt  t00_mode_0.txt  t01_mode_1.txt  t01_mode_2.txt  t01_mode_3.txt  t02_mode_1.txt  t02_mode_2.txt  t02_mode_3.txt  t03_mode_1.txt  t03_mode_2.txt  t03_mode_3.txt  t04_mode_1.txt  t04_mode_2.txt  t04_mode_3.txt  t05_mode_1.txt  t05_mode_2.txt  t05_mode_3.txt  t06_mode_1.txt  t06_mode_2.txt  t06_mode_3.txt  t07_mode_1.txt  t07_mode_2.txt  t07_mode_3.txt  t08_mode_1.txt  t08_mode_2.txt  t08_mode_3.txt  t09_mode_1.txt  t09_mode_2.txt  (+22 more)
TransactionalLockingStrategy/code/src/: forward.hpp  lockable_item.cpp  lockable_item.hpp  main.cpp  tests.cpp  transaction_manager.cpp  transaction_manager.hpp
(+100 files in other folders)
